--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  /*background: url(http://i.imgur.com/b9r5sEL.jpg) bottom center;*/
   background-size: cover;
 }
 
@@ -13,12 +13,13 @@ body,html {
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   align-items: center;
   justify-content: center;
 }
 
 .key {
+  display: inline-block;
   border: 4px solid black;
   border-radius: 5px;
   margin: 1rem;
@@ -48,4 +49,14 @@ kbd {
   text-transform: uppercase;
   letter-spacing: 1px;
   color: #ffc600;
+}
+
+.recordButton{
+  border: none;
+  outline: none;
+  background: none;
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+  text-shadow: 0 0 5px black;
 }
